--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.12",
+    "match-sorter": "^6.3.0",
     "namor": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
